# thesis

./: .cursorrules  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  CURRENT_STATUS_AND_ROADMAP.md  INTERFACE_CONSOLIDATION_PLAN.md  Makefile  PROJECT_PROGRESS_AND_ROADMAP.md  Pipfile  README.md  RESEARCH_QUESTIONS.md  SIMILARITY_METRICS.md  SYNTHETIC_DATA.md  Untitled.ipynb  check.csv  experiment_analysis.md  monitor_and_run_expanded.py  monitor_grid.sh  ndg_vs_kde_experiment.py  pyproject.toml  run_expanded_metrics_experiment.py  run_expanded_with_env.py  run_experiment.py  run_experiment_debug.py  run_rq2_extended_lightning.sh  run_rq2_grid.sh  run_rq2_grid_improved.sh  run_rq2_lightning.sh  run_rq2_minimal_test.sh  run_rq2_parallel.sh  run_rq2_ultra_fast.sh  setup.py  test.ipynb  test_expanded_metrics.py
docs/: CODEBASE_CRITIQUE_AND_ROADMAP.md  README.md  REPOSITORY_CLEANUP_SUMMARY.md  phase3_improvements.md
last_try/: last_try.bib  last_try.tex
latex/: try.tex
new_results/: metadata.csv  results.csv
new_source/: distribution.py  fitness_evaluation.py  fuzzy_helpers.py  main.py  membership_functions.py  preprocessing.py  run.py  similarity_metrics.py  test.ipynb  utils.py
notebooks/: analyze_rq1_results.py  benchmark_optimized_ndg.py  experiment1.ipynb  fuzzy_time_series_analysis.ipynb  integration_example.py  rq1_analysis.ipynb  test.ipynb  time_series_example.py
results/: rq1_grid.csv
scripts/: run_w1_grid.sh
tests/: test_dataset_smoke.py  test_distributions.py  test_membership.py  test_operations.py  test_phase3_improvements.py  test_preprocessing.py  test_retrieval_utils.py  test_similarity.py  test_similarity_comprehensive.py  test_similarity_metrics.py  test_unified_windowing.py  test_utils_sampling.py  test_windowing.py
thesis/: distribution.py  fitness_evaluation.py  fuzzy_helpers.py  main.py  membership_functions.py  (+5 more)
(+147 files in other folders)
