[project]
name = "thesis"
version = "0.1.0"
description = "Development and comparison of fuzzy similarity correlation metrics for sensor data in health application and assisted living environments"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "ipykernel",
    "pylint",
    "tqdm",
    "plotly-express",
    "scikit-learn",
    "statsmodels",
    "matplotlib",
    "mass-ts",
    "pytest-cov>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.setuptools.packages.find]
where = ["thesis"]
